# 2019-Study-Institute

./: .gitignore  README.md
ComputationalMathematics/Course_project/: A_Van-der-Por_equation.ipynb  B_Bongofeber-Van_equation.ipynb  C_Non-Van-der-Por_equation.ipynb  D_Rayleigh_equation.ipynb  README.md
ComputationalMathematics/Practical_task_1/: Different_steps.py  Pakhomov_619.docx  Prac_task_1.py
ComputationalMathematics/Practical_task_2/: Pakhomov_619.docx  Prac_task_2.py
ComputationalMathematics/Practical_task_3/: Project.ipynb
ComputationalMathematics/PythonEducational/1семестр/: CH4_nist.txt  Chislennoe_differentsirovanie_Metod_neopredelennykh_koeffitsientov.ipynb  Chislennye_metody_reshenia_SLAU.ipynb  Metod_Nyutona.ipynb  Nauchny_Python_Bystry_start.ipynb  Oshibki_i_chislovye_tipy_dannykh.ipynb
ComputationalMathematics/PythonEducational/2семестр/: Stiff_ODE.ipynb
Database/First_project/: db_scheme.mwb
OperatingSystems/dev/: 2ts.c  get_PID.c
OperatingSystems/programs/: communication_with_sem.c  get_PID.c  get_square_root.c  length_of_PIPE.c  length_of_SYMLINK.c  number_pi.c
OperatingSystems/projects/: Command_ll.c
OperatingSystems/projects/Cater_Pass/: cater.c  pass.c
ParallelProgram/: CMakeLists.txt  app.sh
ParallelProgram/addit/: exponent.c  factorial.c  factorial.cpp  factorial_old.c  game_life.cpp  long_arith.h
ParallelProgram/base/: hello.c  hello_pth.cpp  sum.c  sum_mpi.c  sum_pth.cpp  transfer_mpi.c  transfer_pth.cpp
ParallelProgram/required/: Lab1TestData.xlsx  integral_lab2.cpp  tran_eq_lab1.c
(+5 files in other folders)
